# rust-api-aws-guide-v1

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  buildspec.yml  docker-compose.yml  makefile
.kiro/settings/: lsp.json
cloudformation/: alb.yml  cicd.yml  database.yml  ecr.yml  ecs.yml  network.yml
docs/: rust-api-aws-guide.md
docs/guide/: 00-overview.md  01-day1-session1-design.md  02-day1-session2-architecture.md  03-day1-session3-implementation.md  04-day2-session1-aws-architecture.md  05-day2-session2-docker.md  06-day2-session3-ecs-deploy.md  07-day2-session4-monitoring.md  08-reference.md  09-day3-session1-update.md  10-day3-session2-auth.md  11-day3-session3-cicd.md  12-day3-session4-api-gateway.md
migrations/: 20251216141825_create_users.sql
src/: main.rs
src/api/: errors.rs  handler.rs
src/application/: dto.rs  services.rs
src/domain/: errors.rs  mod.rs  user.rs
src/infrastructure/: config.rs  database.rs  repositories.rs
